WIP: fix spacing on header image

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -15,13 +15,14 @@ html, body {
   padding-bottom: 50px;}  /* must be same height as the footer -- sticky footer */
 }
 
-.main_logo {
-  margin: 0 auto;
+/*#main_logo {*/
+  /*margin: 0 auto;
   padding: 50px 0 15px 0;
   position: relative;
-  text-align: center;
+  text-align: center;*/
+/*  margin: 50px;
 }
-
+*/
 .beast-wrap {
   margin-top: 50px;
   width: 800px;
